# GAPpy

./: .gitignore  CLAUDE.md  README.md  main.py  plot_outputs.py  pyproject.toml
input_data/: uvafme_config.json
src/: __init__.py  climate.py  constants.py  csv_file.py  dispersal.py  gappy.py  genus_groups.py  input_module.py  io_utils.py  model.py  output_module.py  parameters.py  plot.py  random_utils.py  site.py  sitelist.py  soil.py  species.py  tree.py  utilities.py  uvafme.py  vararray.py
